# rc-lab

./: README.md
assignment-1/: assignment-1.xpr  waveforms.wcfg
assignment-1/assignment-1.cache/sim/: ssm.db
assignment-1/assignment-1.cache/wt/: synthesis.wdf  webtalk_pa.xml
assignment-1/assignment-1.hw/hw_1/: hw.xml
assignment-1/assignment-1.runs/.jobs/: vrs_config_1.xml  vrs_config_2.xml  vrs_config_3.xml  vrs_config_4.xml  vrs_config_5.xml
assignment-1/assignment-1.runs/implementation/: .init_design.begin.rst  .place_design.begin.rst  .vivado.begin.rst  gen_run.xml  htr.txt  init_design.pb  opt_design.pb  phys_opt_design.pb  place_design.pb  project.wdf  route_design.pb  rundef.js  runme.sh  uart_rx_design_wrapper.bit  uart_rx_design_wrapper.tcl  uart_rx_design_wrapper.vdi  uart_rx_design_wrapper_bus_skew_routed.rpt  uart_rx_design_wrapper_bus_skew_routed.rpx  uart_rx_design_wrapper_clock_utilization_routed.rpt  uart_rx_design_wrapper_control_sets_placed.rpt  uart_rx_design_wrapper_drc_opted.rpt  uart_rx_design_wrapper_drc_opted.rpx  (+21 more)
assignment-1/assignment-1.sim/: fifo_tb.wcfg  waveforms.wcfg
assignment-2/: assignment-2.xpr  system_with_simple_alu.xsa
assignment-2/system_with_simple_alu/: sysdef.xml  system_with_simple_alu.bit  system_with_simple_alu.hwh  xsa.json  xsa.xml
assignment-3/pynq/: lcs.bit  lcs.hwh  lcs.ipynb
assignment-3/test/: CMakeLists.txt  main.cpp
assignment-3/vitis/: .cproject  .project  .vitis_hls_log_all.xml  hls.app
assignment-3/vivado/: lcs.xsa  linear_contrast_stretching.xpr
ip_repo/simple_alu_0_1_0/: component.xml
(+1082 files in other folders)
